fixed vertical alignment on homepage and re moved duplicate drawer--open

--- a/alexandria-balkaran-snaps/src/components/FilterButton/FilterButton.scss
+++ b/alexandria-balkaran-snaps/src/components/FilterButton/FilterButton.scss
@@ -23,6 +23,7 @@
       width: 7rem;
       padding: 0.6875rem 1.375rem;
       border-radius: 2rem;
+      margin: 1.5rem 1.5rem;
     }
 
     &:hover,
